# PyZ-Launcher-for-Minecraft

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: loaders.txt  main.py
src/modules/: app_config.py  e.py  launcher.py  refresh_handler.py  updater.py  utils.py
src/update/: updater_process.py  version_info.txt
src/views/: home_view.py  launcher_profiles_view.py
src/widgets/: RotatingText.py  app.py  ui.py
