[project]
name = "PyZ-Launcher"
version = "0.5.1"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Zadkiel Avendano"}
]
dependencies = [
  "flet==0.28.3",
  "minecraft-launcher-lib==8.0",
  "psutil==7.2.0"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.pyzlauncher"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "PyZ Launcher"

# company name to display in about app dialogs
company = "PyZ Launcher"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2026 by Zadkiel Avendano"

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Initializing Launcher..."

[tool.flet.app.startup_screen]
show = true
message = "Initializing PyZ Launcher for Minecraft..."

[tool.flet.compile]
app = true # --compile-app
packages = true # --compile-packages
cleanup = true # --cleanup-on-compile

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "minecraft-launcher-lib==8.0",
    "psutil==7.2.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}